--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<title>Amelie Boulangerie</title>
 		<link href="styles.css" rel="stylesheet">
+		<meta name="author" content="Carley Gohring">
+		<meta name="description" content="Welcome to Amerlie Boulangerie! We are known for the best macarons in the Tempe area and they come in a variety of flavors but feel free to stop by to try our flavored coffees and tea too. We also offer live music every Thursday and Saturday night!">
 	</head>
 	<body>
 		<header>
@@ -20,6 +22,7 @@
 			</nav>
 			<main>
 				<h2>Experience the Difference</h2>
+				<img src="images/cafe-counter.jpg" alt="A picture of a person working behind the cafe's counter">
 				<p>Amelie Boulangerie is the master of flavor combinations. The jewel-colored macarons come in the most tempting of flavors. Experience the difference at Amelie Boulangerie.</p>
 			
 				<ul>
