added favicon image

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Amelie Boulangerie</title>
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<link href="styles.css" rel="stylesheet">
 		<meta name="author" content="Carley Gohring">
 		<meta name="description" content="Welcome to Amerlie Boulangerie! We are known for the best macarons in the Tempe area and they come in a variety of flavors but feel free to stop by to try our flavored coffees and tea too. We also offer live music every Thursday and Saturday night!">
